# rust_mandelbrot_set

./: .gitignore  Cargo.toml  README.md
src/: generate.rs  loader.rs  main.rs
