[package]
name = "rust_mandelbrot_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
num = "0.4"
rayon = "1.5"
num-complex = "0.4.0"
lazy_static = "1.4.0"
indicatif = "0.16"
imageproc = "0.23.0"



[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
